--- a/recipes/style.css
+++ b/recipes/style.css
@@ -26,18 +26,27 @@ h1 {
     text-align: center;
 }
 
+img {
+    padding: 1rem 5rem 1rem 5rem;
+    width: 100%;
+}
+
+h2, p, ul, ol {
+    margin: 1rem 5rem 1rem 5rem;
+}
+
 ul {
-    border: 2px solid red;
-    list-style-type: none;
+    /* border: 2px solid red; */
+    /* list-style-type: none; */
     /* margin: 1rem; */
     border-radius: 0.7rem;
 }
 
 li {
-    border: 2px solid red;
-    margin: 1rem;
-    border-radius: 0.5rem;
-    padding: 1rem;
+    /* border: 2px solid red; */
+    margin-left: 1.7em;
+    /* border-radius: 0.5rem; */
+    /* padding: 1rem; */
 }
 
 a {
